--- a/whatif/whatif/000/whatif.scss
+++ b/whatif/whatif/000/whatif.scss
@@ -19,3 +19,9 @@
     .whatif-bottomcenter &{bottom:$padding;left:0;right:0;margin:auto auto}
     .whatif-center &{bottom:0;top:0;left:0;right:0;margin:auto auto}
 }
+
+.whatif{
+    &--description{
+
+    }
+}
